# foodic

./: .gitignore  Procfile  README.md  package.json
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/api/src/api/: menu.rs  restaurant.rs  users.rs
apps/api/src/database/: connection.rs
apps/api/src/models/: dish.rs  mod.rs  users.rs
apps/app/: App.tsx  app.json  babel.config.js  package.json  webpack.config.js
apps/app/app/: index.tsx
apps/app/app/create-dish/: index.tsx
apps/app/app/dishes/: index.tsx
apps/app/app/edit-dish/: [dish].tsx
apps/app/app/edit-profile/: index.tsx
apps/app/app/orders/: index.tsx
apps/app/app/profile/: [profileId].tsx
apps/app/app/users/: index.tsx
apps/app/screens/login-screens/: index.tsx
apps/expo/: .gitignore  app.json  babel.config.js  package.json
apps/expo/app/: _layout.tsx  index.tsx
apps/expo/app/categories/: index.tsx
apps/expo/app/create-user/: index.tsx
apps/expo/app/dish/: [dish].tsx  index.tsx
apps/expo/app/dishes/: [dishes].tsx
apps/expo/app/edit-dish/: index.tsx
apps/expo/app/edit-profile/: [profileId].tsx
apps/expo/app/login/: index.tsx
apps/expo/app/order/: [order].tsx  index.tsx
apps/expo/config/: initSupabase.ts
apps/expo/context/: ThemeProvider.tsx
apps/expo/screens/: Users.tsx
apps/foodic-api/: Cargo.toml  Dockerfile  docker-compose.yml
apps/foodic-api/src/: main.rs
apps/foodic-api/src/api/: menu.rs  mod.rs  restaurant.rs  users.rs
apps/foodic-api/src/database/: connection.rs
apps/foodic-api/src/models/: dish.rs  mod.rs  restaurant.rs  token.rs  user.rs
(+43 files in other folders)
