[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
serde = { version = "1.0.167", features = ["derive"] }
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
