[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
cargo-watch = "8.4.0"
dotenvy = "0.15"
futures = "0.3.28"
mongodb = "2.6.0"
serde = { version = "1.0.167", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
