[package]
name = "foodic-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4"
bson = "2.6.1"
cargo-watch = "8.4.0"
dotenvy = "0.15"
env_logger = "0.10.0"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
log = "0.4.20"
mongodb = "2.6.0"
serde = { version = "1.0.167", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
